# FlowExcel

./: .gitignore  README.md  README_EN.md  README_WATCHDOG.md  WINDOWS_DEBUG_GUIDE.md  debug_windows.bat  debug_windows_paths.py  eslint.config.js  index.html  package.json  pnpm-lock.yaml  project.md  todo.txt
src-python/: .coveragerc  .gitignore  build_binary.py  pyproject.toml  test_aggregator_chain.py
src-python/src/: README.md  config.py  daemon.py  dtos.py  excel_ops.py  main.py  models.py  test_integration.py  test_multiple_aggregators.py  test_pipeline.py  test_real_data.py  utils.py
src-python/src/app/: main.py  utils.py
src-python/src/app/decorators/: i18n_error_handler.py
src-python/src/app/exceptions/: i18n_exceptions.py
src-python/src/app/locales/: en.json  zh.json
src-python/src/app/middleware/: i18n_middleware.py
src-python/src/app/models/: models.py
src-python/src/app/routers/: __init__.py  excel_router.py  performance_routes.py  pipeline_router.py  workspace_router.py
src-python/src/app/services/: __init__.py  excel_service.py  i18n_service.py  pipeline_service.py  workspace_service.py
src-python/src/excel/: excel_ops.py  workspace_manager.py
src-python/src/pipeline/: __init__.py  models.py  processor.py
src-python/src/pipeline/execution/: __init__.py  batch_preloader.py  branch_executor.py  context_manager.py  executor.py  file_analyzer.py  path_analyzer.py
src-python/src/pipeline/performance/: analyzer.py
src-python/src/pipeline/processors/: __init__.py  aggregator.py  base.py  index_source.py  output.py  row_filter.py  row_lookup.py  sheet_selector.py
src-python/src/pipeline/utils/: __init__.py  data_cleaner.py
src-python/src/test/: pytest.ini  run_all_tests.py  setup_test_env.py
src-python/src/test/test_cases/: test_aggregator.py  test_base.py  test_index_source.py  test_integration.py  test_output.py  test_row_filter.py  test_row_lookup.py  test_sheet_selector.py
src-python/src/test/test_data/excel_files/: test_case.xlsx
src-python/src/test/test_data/test_specs/: aggregator.json  enhanced_test_runner_config.json  index_source.json  integration.json  merged_test_config.json  merged_validation_report.json  output.json  row_filter.json  row_lookup.json  sheet_selector.json
src-python/src/workspace/487f354a-b521-4af5-9e34-383cf9de5f14/: workspace.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs  manager.rs  python_watchdog.rs  types.rs  workspace.rs
src-tauri/src/bridge/: api_manager.rs  commands.rs  daemon_manager.rs  mod.rs  models.rs  python_daemon.rs
src-tauri/src/workspace/: commands.rs  models.rs  service.rs  utils.rs
(+95 files in other folders)
