[project]
name = "flowexcel-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic<2.0",
    "pyinstaller>=6.13.0",
    "xlrd>=2.0.1",
    "networkx>=2.7.0",
    "debugpy>=1.8.14",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "requests>=2.31.0",
]




