[package]
name = "tauri-excel-app"
version = "0.1.0"
description = "A Tauri App for Excel Data Processing"
authors = ["timspizza"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
which = "6.0"
libc = "0.2"
